# face_boundary_detection

./: .gitignore  README.md  pyproject.toml  requirements.txt
facial_boundary_detection/: main.py
facial_boundary_detection/src/: utils.py
src/facial_boundary_detection/: main.py
src/facial_boundary_detection/src/: boundary.py  keypoints.py  utils.py
